--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 
-    
+    asdasda align-self: start;
 }
